--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,6 @@
 .header {
-  min-height: 200px;
+  min-height: 100px;
+  background-color: beige;
 
-  background-color: aquamarine;
+  // background-color: ;
 }
