--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,31 @@
 .app {
+  background-color: burlywood;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.filters {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  padding: 20px 10%;
 }
 
 .main {
-  background-color: azure;
+  padding: 30px 10% 50px;
+  overflow-x: auto;
 }
 
 footer {
+  margin-top: auto;
+  min-height: 100px;
   background-color: rebeccapurple;
+}
+
+.info {
+  justify-content: center;
+  gap: 20px;
+  display: flex;
+  margin-bottom: 30px;
 }
