--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,20 @@
 .header {
   min-height: 100px;
-  background-color: beige;
+  background-color: #31b125;
+  box-shadow: 0px 0px 5px rgb(46, 46, 42);
+  padding-left: 30px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+
+  img {
+    max-height: 40px;
+  }
+
+  h3 {
+    color: white;
+    font-size: 30px;
+  }
 
   // background-color: ;
 }
