--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,6 @@
 .app {
   // background-color: burlywood;
-  background-color: #f0f2f4;
+  background-color: #c7d6e6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
