--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
   min-height: 100px;
   background-color: #31b125;
   box-shadow: 0px 0px 5px rgb(46, 46, 42);
-  padding-left: 30px;
+  padding-left: 10%;
   display: flex;
   gap: 20px;
   align-items: center;
