--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   min-height: 100px;
-  background-color: #31b125;
+  background-color: #2a2c29;
   box-shadow: 0px 0px 5px rgb(46, 46, 42);
   padding-left: 10%;
   display: flex;
